--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </form>
     </div>
     <div class="header-right">
-      <img src="./img/glo_logo.png" class="logo-academy" alt="Лого Академии">
+      <img src="http://is4.mzstatic.com/image/thumb/Purple111/v4/82/59/aa/8259aae0-b039-2a77-cb3e-332938246391/source/512x512bb.jpg" class="logo-academy" alt="Лого Академии">
     </div>
   </header>
 
@@ -134,61 +134,61 @@
 
     <div class="container">
       <div class="row" id="yt-wrapper">
-        <div class="yt" data-youtuber="B7rZxLzSAOM">
+        <div class="yt" data-youtuber="o-3_aTo8sTM">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/001.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
-          <div class="yt-title">Как я стал фрилансером веб-разработчиком</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-title">Новый фильм) (джейсен стетхем перевозчик 5) - кино 2019 новинка в хорошем качестве</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="NF6DV-S9DEE">
+        <div class="yt" data-youtuber="LTqQkVFmnjA">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/002.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://www.fillmurray.com/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">Способы перебора массивов в JavaScript | Часть 2 | Уроки JavaScript</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="NtcgznHOBlc">
+        <div class="yt" data-youtuber="TNdvsHBVVbA">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/003.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">Способы перебора массивов в JavaScript | Часть 1 | Уроки JavaScript</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="c5--bmtCCVo">
+        <div class="yt" data-youtuber="Ek_GsMiTukw">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/004.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">Открытый урок с курса JS 9.0 - Слайдер карусель</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="amrIqeOXQW0">
+        <div class="yt" data-youtuber="oVrgETG-xkw">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/005.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">JS-фичи #4 | Круглый прогрессбар на JavaScript | Circle progress bar</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="VpM4kAwuJTY">
+        <div class="yt" data-youtuber="2ZYupdsLJiU">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/006.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">JavaScript фичи #3 | Прогресс бар при прокрутке страницы | JS</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="__Kavgr47F8">
+        <div class="yt" data-youtuber="OjXSCDwIa_o">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/007.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">JavaScript фичи #2 Parallax на чистом JS | Параллакс эффект</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
-        <div class="yt" data-youtuber="DqfgJDtDIcg">
+        <div class="yt" data-youtuber="VNMy1PXvv58">
           <div class="yt-thumbnail" style="--aspect-ratio:16/9;">
-            <img src="./img/008.jpg" alt="thumbnail" class="yt-thumbnail__img">
+            <img src="https://picsum.photos/480/360" alt="thumbnail" class="yt-thumbnail__img">
           </div>
           <div class="yt-title">JavaScript фичи #1 | 3D карточки с наведением | JS фичи</div>
-          <div class="yt-channel">Glo Academy — HTML, CSS и JS</div>
+          <div class="yt-channel">Toloka_to</div>
         </div>
       </div>
       <button id="next_result" style="display: none">Далее</button>
