--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
       </div>
       <div class="header-right">
         <img
-          src="http://is4.mzstatic.com/image/thumb/Purple111/v4/82/59/aa/8259aae0-b039-2a77-cb3e-332938246391/source/512x512bb.jpg"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/FC_Dynamo_Kyiv_logo.svg/617px-FC_Dynamo_Kyiv_logo.svg.png"
           class="logo-academy"
-          alt="Лого Академии"
+          alt="logo FCDK"
         />
       </div>
     </header>
