--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="sidebarMenu">
         <ul>
           <li class="active" id="yt_main">
-            <a href="./index.html">
+            <a href="#">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8"></path>
               </svg>
